Fix dropdown icon alignment in the navbar

--- a/src/scss/custom/_navigation.scss
+++ b/src/scss/custom/_navigation.scss
@@ -359,6 +359,7 @@
               .nav-link {
                 display: flex;
                 align-self: flex-end;
+                align-items: center;
               }
             }
           }
